# petstore

./: .coveragerc  .gitignore  pyproject.toml  readme.md
.github/workflows/: check-code.yml
petstore/: app.py  database.py  errors.py  inputs.py  responses.py  types.py
petstore/resolvers/mutations/: __init__.py  create_pet.py  create_pets.py  delete_pet.py  delete_pets.py  patch_pet.py  patch_pets.py  update_pet.py  update_pets.py
petstore/resolvers/queries/: __init__.py  count_pets.py  get_pet.py  get_pets.py  list_pets.py
petstore/resolvers/subscriptions/: __init__.py  subscribe_to_pet_by_id.py  subscribe_to_pets_by_id.py  subscribe_to_pets_list.py
petstore/schema/: mutation.py  query.py  subscription.py
tests/: conftest.py  test_api_mutations.py  test_api_queries.py  test_api_subscriptions.py  test_database.py
